developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_outs_too_long.kmn
store(&NAME) 'error_outs_too_long'
store(&VERSION) '9.0'

begin unicode > use(main)

group(main) using keys

c maximum store length is 4096 UTF-16 code units, including U+0000 terminator
c #define GLOBAL_BUFSIZE  4096   // compfile.h
c so we need 0x101C - 0x0020 + 1 = 0x0FFD --> 4093 words
c + 1, for 'a' in the rule below = 4094, which triggers the buffer boundary check.
c Noting that this is conservative and losing 2 possible chars, but not fixing
c in compiler.cpp at this time.
c See #11136 for calculation adjustment TODO

store(x)    U+0020 .. U+101C

'a' outs(x) + 'x' > 'x' context
